--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prettier": "^2.8.8",
     "prettier-eslint": "^15.0.1",
     "typescript": "^5.0.4",
-    "vite": "^4.3.2"
+    "vite": "^4.3.2",
+    "vite-tsconfig-paths": "^4.2.0"
   }
 }
