--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,6 @@
     "skipLibCheck": true,
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
     "forceConsistentCasingInFileNames": true,
     "module": "ESNext",
     "moduleResolution": "Node",
@@ -15,6 +14,12 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+
+    /* Linting */
+    "strict": false, // NOTE: 可以先把 strict 模式設為 false， 在 build 的時候，前期有一些 TS 的 warning 或 error 都會中止
+    "noUnusedLocals": true, // NOTE: eslint 也有相關設定
+    "noUnusedParameters": true, // NOTE: eslint 也有相關設定
+    "noFallthroughCasesInSwitch": true,
 
     // alias
     "baseUrl": "./",
