chore: tsconfig edit & add node, npm version limit

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,10 @@
 
     // alias
     "baseUrl": "./",
-    "paths": { "@/*": ["src/*"] }
+    "paths": { "@/*": ["src/*"] },
+
+    "checkJs": false,
+    "allowSyntheticDefaultImports": true
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
