--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,7 @@
     "baseUrl": "./",
     "paths": { "@/*": ["src/*"] },
 
-    "checkJs": false,
-    "allowSyntheticDefaultImports": true
+    "checkJs": false
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
