--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "immer": "^10.0.2",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.0"
+    "react-router-dom": "^6.14.0",
+    "use-immer": "^0.9.0"
   },
   "devDependencies": {
     "@types/node": "^20.3.2",
