--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "immer": "^10.0.2",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0",
+    "sweetalert2": "^11.7.27",
     "use-immer": "^0.9.0"
   },
   "devDependencies": {
