--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.14.0",
     "sweetalert2": "^11.7.27",
     "use-immer": "^0.9.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^20.3.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
