--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.18",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
     "immer": "^10.0.2",
