--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "immer": "^10.0.2",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
